<-ban tam thoi->